@@ -1,4 +1,10 @@
 ----- cvs ci ------
+Wed Apr 18 23:24:50 CEST 2001
+tobi:
+* new keywords: autofilecreatesubdirs and autoareacreatesubdirs
+  for creating /filebase/gfd/app/comm/ instead of /filebase/gdb.app.comm/
+
+----- cvs ci ------
 Fri Mar 16 12:43:21 NOVT 2001
 max:
 * fixed processing fechoes w/o groups (thanx to Afonin Denis)
